@@ -11,96 +11,8 @@
 		<control type="group">
 			<include>OpenClose_Right</include>
 			<!-- ** Required ** Do not change <id> or <type> (Smooth scrolling list for lyrics) -->
-			<control type="list" id="110">
-				<visible>!Skin.HasSetting(enable_animatedlyrics)</visible>
-				<centerleft>50%</centerleft>
-				<top>45</top>
-				<width>400</width>
-				<height>450</height>
-				<onleft>111</onleft>
-				<onright>111</onright>
-				<onup>110</onup>
-				<ondown>110</ondown>
-				<pagecontrol>101</pagecontrol>
-				<scrolltime tween="quadratic" easing="out">200</scrolltime>
-				<itemlayout height="50">
-					<control type="label">
-						<width>1830</width>
-						<height>50</height>
-						<align>center</align>
-						<info>ListItem.Label</info>
-					</control>
-				</itemlayout>
-				<focusedlayout height="50">
-					<control type="label">
-						<width>1830</width>
-						<height>50</height>
-						<align>center</align>
-						<label fallback="--">$INFO[ListItem.Label]</label>
-					</control>
-				</focusedlayout>
-			</control>
-			<control type="group">
-				<visible>Skin.HasSetting(enable_animatedlyrics)</visible>
-				<control type="image">
-					<right>30</right>
-					<top>48</top>
-					<width>1019</width>
-					<height>510</height>
-					<texture background="true">dialogs/back.png</texture>
-				</control>
-				<control type="list" id="110">
-					<right>55</right>
-					<top>48</top>
-					<width>965</width>
-					<height>500</height>
-					<onleft>111</onleft>
-					<onright>111</onright>
-					<onup>110</onup>
-					<ondown>110</ondown>
-					<pagecontrol>111</pagecontrol>
-					<scrolltime>200</scrolltime>
-					<itemlayout height="56">
-						<control type="label">
-							<left>0</left>
-							<top>0</top>
-							<width>975</width>
-							<height>56</height>
-							<font>font14</font>
-							<aligny>center</aligny>
-							<align>center</align>
-							<label fallback="--">$INFO[ListItem.Label]</label>
-						</control>
-					</itemlayout>
-					<focusedlayout height="56">
-						<control type="label">
-							<left>0</left>
-							<top>0</top>
-							<width>975</width>
-							<height>56</height>
-							<font>font14</font>
-							<aligny>center</aligny>
-							<align>center</align>
-							<shadowcolor>black</shadowcolor>
-							<label fallback="--">$INFO[ListItem.Label]</label>
-							<visible>!Control.HasFocus(110)</visible>
-						</control>
-						<control type="label">
-							<left>0</left>
-							<top>0</top>
-							<width>965</width>
-							<height>56</height>
-							<font>font14</font>
-							<aligny>center</aligny>
-							<align>center</align>
-							<shadowcolor>black</shadowcolor>
-							<textcolor>$VAR[SkinColorVar]</textcolor>
-							<label fallback="--">$INFO[ListItem.Label]</label>
-							<visible>Control.HasFocus(110)</visible>
-						</control>
-					</focusedlayout>
-				</control>
-			</control>
+			<include condition="Skin.HasSetting(enable_animatedlyrics)">ClassicLyrics</include>
+			<include condition="!Skin.HasSetting(enable_animatedlyrics)">AnimatedLyrics</include>
 			<!-- ** Required ** Do not change <id> or <type> (Song Chooser if it gets it wrong) -->
 			<control type="group">
 				<centerleft>50%</centerleft>
