@@ -2,6 +2,7 @@
 • Add support for extendedinfo youtube list
 • Add shortcut for movies set info to context menu
 • Add shortcut for extended info to context menu
+• Fix lyrics on music visualisation
 • Minor fixes
 • Minor changes
 
